--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Microokoa Guaranty Capital - Donate as little as Kshs 200 and access loans worth 10x your donation. Community-powered financing for all.">
+    <meta name="description" content="MICROOKOA GUARANTY CAPITAL - Donate as little as Kshs 200 and access loans worth 10x your donation. Community-powered financing for all.">
     <meta name="keywords" content="microfinance, loans, donations, Kenya, community finance, business loans, quick loans">
-    <title>Microokoa Guaranty Capital - Donate Today, Borrow Now!</title>
+    <title>MICROOKOA GUARANTY CAPITAL - Donate Today, Borrow Now!</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -23,9 +23,9 @@
             </div>
             <div class="nav-menu">
                 <a href="#home" class="nav-link active">Home</a>
-                <a href="#donate" class="nav-link">Donate</a>
-                <a href="#loans" class="nav-link">Loans</a>
                 <a href="#about" class="nav-link">About Us</a>
+                <a href="#loans" class="nav-link">Loans</a>
+                <a href="#donate" class="nav-link">Donate</a>
                 <a href="#contact" class="nav-link">Contact</a>
             </div>
             <button class="apply-now donate-btn">
@@ -41,7 +41,7 @@
     <section class="hero" id="home">
         <div class="container hero-container">
             <div class="hero-content">
-                <h1 class="slogan">#Donate #Today, #Borrow #Now!</h1>
+                <h1 class="slogan">Donate Today, Borrow Now!</h1>
                 <h2>Microokoa Guaranty Capital</h2>
                 <p class="hero-subtitle">Donate as little as Kshs 200 and access loans worth 10x your donation.</p>
                 <p class="cta-text">"Donate, Borrow, Thrive"</p>
@@ -94,9 +94,6 @@
                     <div class="step-icon">
                         <i class="fas fa-heart" aria-hidden="true"></i>
                     </div>
-                    <h3>Donate</h3>
-                    <p>Contribute as little as Kshs 200 to our community fund</p>
-                </div>
                 <div class="step">
                     <div class="step-number">2</div>
                     <div class="step-icon">
@@ -132,7 +129,7 @@
                     <h3>QuickLoans</h3>
                     <p>Fast, small loans for emergencies and immediate needs. Get approved within hours.</p>
                     <ul class="loan-features">
-                        <li><i class="fas fa-check"></i> Up to Kshs 50,000</li>
+                        <li><i class="fas fa-check"></i> Up to Kshs 30,000</li>
                         <li><i class="fas fa-check"></i> 24-hour approval</li>
                         <li><i class="fas fa-check"></i> Flexible repayment</li>
                     </ul>
@@ -144,8 +141,8 @@
                     <h3>BusinessLoans</h3>
                     <p>Capital for business expansion, inventory, and equipment. Grow your enterprise.</p>
                     <ul class="loan-features">
-                        <li><i class="fas fa-check"></i> Up to Kshs 500,000</li>
-                        <li><i class="fas fa-check"></i> 3-12 month terms</li>
+                        <li><i class="fas fa-check"></i> Up to Kshs 50,000</li>
+                        <li><i class="fas fa-check"></i> 3-6 month terms</li>
                         <li><i class="fas fa-check"></i> Business training</li>
                     </ul>
                 </div>
@@ -184,7 +181,7 @@
                             <i class="fas fa-lock"></i>
                             <div>
                                 <h3>Safe & Secure</h3>
-                                <p>Non-deposit taking institution - your funds are protected</p>
+                                <p>Non-deposit taking institution</p>
                             </div>
                         </div>
                     </div>
@@ -192,7 +189,7 @@
                 <div class="calculator-box">
                     <div class="input-group">
                         <label for="donationAmount">Your Donation (KSH)</label>
-                        <input type="range" id="donationAmount" min="200" max="100000" value="2000" step="100">
+                        <input type="range" id="donationAmount" min="200" max="50000" value="2000" step="100">
                         <div class="amount-display">
                             <span id="donationValue">2,000</span>
                             <span>KSH</span>
@@ -247,12 +244,10 @@
                         <div class="about-feature">
                             <i class="fas fa-shield-alt"></i>
                             <h4>Non-Deposit Taking</h4>
-                            <p>We don't accept public deposits - your money stays in our secured lending pool</p>
+                            <p>We don't accept public deposits </p>
                         </div>
                         <div class="about-feature">
                             <i class="fas fa-users"></i>
-                            <h4>Community Focused</h4>
-                            <p>100% community-owned and operated for local development</p>
                         </div>
                         <div class="about-feature">
                             <i class="fas fa-balance-scale"></i>
@@ -295,7 +290,7 @@
                             <div>
                                 <h4>Call Us</h4>
                                 <p>+254-710-340-896</p>
-                                <small>Available 8AM - 6PM EAT</small>
+                                <small>Available 8AM - 5PM EAT</small>
                             </div>
                         </div>
                         <div class="contact-item">
@@ -312,7 +307,7 @@
                             <i class="fas fa-envelope"></i>
                             <div>
                                 <h4>Email Us</h4>
-                                <p>info@microokoa.co.ke<br>support@microokoa.co.ke</p>
+                                <p>microokoaguarantycapital@gmail.com </p>
                             </div>
                         </div>
                     </div>
@@ -373,7 +368,7 @@
                     <div>
                         <h3>Microokoa</h3>
                         <p>Guaranty Capital</p>
-                        <p class="footer-slogan">#Donate #Today, #Borrow #Now!</p>
+                        <p class="footer-slogan">Donate Today, Borrow Now!</p>
                     </div>
                 </div>
                 
@@ -396,10 +391,9 @@
                     
                     <div class="link-group">
                         <h4>Contact Info</h4>
-                        <p><i class="fas fa-phone"></i> +254-710-340-896</p>
-                        <p><i class="fas fa-envelope"></i> info@microokoa.co.ke</p>
+                        <p><i class="fas fa-phone"></i> +254-710-340-896</p>     
                         <p><i class="fas fa-clock"></i> Mon-Fri: 8am-6pm</p>
-                        <p><i class="fas fa-map-marker-alt"></i> Community Development Center</p>
+                        <p><i class="fas fa-map-marker-alt"></i> A donation-driven community development financial institution (cdfi)</p>
                     </div>
                 </div>
             </div>
@@ -419,3 +413,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
