--- a/index.html
+++ b/index.html
@@ -118,6 +118,10 @@
     <section class="services" id="loans">
         <div class="container">
             <div class="section-header">
+                    <h1 class="section-title"> Donate </h1>
+                <p class="section-subtitle"> Donate Today </p>
+            </div>
+             </div>
                 <h2 class="section-title">Our Loan Products</h2>
                 <p class="section-subtitle">Tailored financing solutions for your needs</p>
             </div>
@@ -413,4 +417,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
