--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </div>
     </section>
 
-    <!-- How It Works -->
+        <!-- How It Works -->
     <section class="how-it-works">
         <div class="container">
             <div class="section-header">
@@ -94,6 +94,9 @@
                     <div class="step-icon">
                         <i class="fas fa-heart" aria-hidden="true"></i>
                     </div>
+                    <h3>Donate</h3>
+                    <p>Contribute as little as Kshs 200 to our community fund</p>
+                </div>
                 <div class="step">
                     <div class="step-number">2</div>
                     <div class="step-icon">
@@ -417,5 +420,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
